# ntru_2021

./: .gitignore  CMakeLists.txt
include/NTRU/: NTRU.hh  NTRU_Keys.hh  NTRU_Poly.hh  NTRU_Util.hh
model/: model.cpp
src/: main.cpp
test/: test_NTRU_Util.cc
